css/style.css
/* ... */
@media (max-width: 768px) {
  .back-to-top {
    bottom: 15px;
  }
}

.img-container {
        text-align: center;
        display: block;
      }

      .img-fluid{
        margin-top: -250px;
        width: 700px;
        height: 700px;

      }
      .intro-subtitle{
        margin-top: -300px;


      }
      /* #mainNav{ */
        /* height: 200px; */
        /* width: 200px; */
/*  */
      /* } */
 #about{
   text-align: center;
 }    
 .boutheader{
   font-size: x-large;
 } 
 #solution{
   height:150px;
   background-color:#EEEEEE;
 }

 #mainNav{
   background-color:  rgba(7, 17, 7, 0.842);
 }
 #footer{
   height: 100px;
   background-color: #EEEEEE;
 }

 img.loadimg {
    bottom: 6px;
    position: relative;
    right: 8px;
}
.pfooter{

  color: black;
}

/* #solutions{ */
/*  */
/* height: 800px; */
/* background-color: rgb(216, 174, 174); */
/* margin-top: 5%; */
/*  */
/*  */
/* } */
/* .phone{ */
  /*  */
/* } */
/* .row row-centered pos img{ */
  /* height: 200px; */
/* } */
/* .well{ */
  /*  */
/* } */
/* .di{ */
  /* width: 300px; */
  /* height: 300px; */
  /* background-color: #4e4e4e; */
  /* margin-top: -480px; */
/* } */

#cheepi{
  height: 500px;
}
.service-area{
  margin-top: 30px;
}

.service-area p{
  margin-bottom: -5px;
}

.service-wrap{
  box-shadow: 0 0 10px rgba(0,0,0,0.2);
  overflow: hidden;
  padding: 25px 35px;
  position: relative;
  transition: all 0.5s ease 0s;
  z-index: 9;
  margin-top: 20px;
  
}


.service-wrap::before, .service-wrap::after{
  content: "";
  height: 300%;
  position: absolute;
  transform: rotate(45deg);
  width: 120%;
  z-index: -9;
  transition: all 0.5s;
  opacity: 0;
  background-color: #34495e;
}

.service-wrap::before{
  top: -37px;
  left: 100%;
}

.service-wrap:hover:before{
  left: -27px;
  opacity: 1;
}

.service-wrap::after{
  right: 100%;
  bottom: -37px;
}

.service-wrap:hover:after{
  right: -27px;
  opacity: 1; 
}

.service-wrap:hover{
  color: white;
}


.service-wrap:h3{
  color: white;
}


.service-wrap:hover h3{
  color: white;
}

.service-wrap:hover h3:after{
  background-color: white;
}

.service-icon i{
  font-size: 30px;
  margin-bottom: 20px;
  transition: all 0.5s;
}


.service-wrap:hover .service-icon i{
  transform: rotate(360deg);
}

.service-wrap h3{
  font-size: 25px;
  font-weight: 700;
  padding-bottom: 15px;
  position: relative;
  
}

.service-wrap p{
  font-size: 14px;
  margin-bottom: 0;
}
.cheepi{
  height: 200px;
}

.privacy_page_h2
{

  font-family: 'Catamaran', sans-serif;
  font-size: 20px;
}
.abou3{
  background-color: #fff;
  height: 300px;
  margin-top: -2%;
  font-family: 'Catamaran', sans-serif bolder;
  font-size: 20px;
  

}
#adjust{
 
}

.imagecenter
{

  background-position: center;
  display: block;
  margin: auto;


}
.digitalidentity
{
   font-family: 'Catamaran', sans-serif bolder;

   font-size: 15px;

}

.card-text-css
{
     font-family: 'Catamaran', sans-serif bolder;
  
     font-size: 15px;


}
.table-color
{
 
  font-color: white;
}
.contact-family
{

  font-family: 'Catamaran', sans-serif bolder;

  font-size: 15px;
  font-weight: bolder;
  color: black;



}

